some fixes on mobile

--- a/client/client/src/components/pages/mainPage/bestsellers/bestsellers.scss
+++ b/client/client/src/components/pages/mainPage/bestsellers/bestsellers.scss
@@ -71,6 +71,7 @@
 
         .swiper-pagination {
             text-align: center;
+            top: 98% !important;
             .swiper-pagination-bullet {
                 position: relative;
                 opacity: 1;
