--- a/client/client/src/index.scss
+++ b/client/client/src/index.scss
@@ -116,9 +116,6 @@
     justify-content: center;
     column-gap: 17px;
     margin: 70px 0 0 0;
-    @media(max-width: 575px) {
-        margin: 60px 0 40px 0;
-    }
     &__bullet {
         position: relative;
         display: flex;
